--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "canva-magical-mouse-effec": "^0.0.1",
+    "canva-magical-mouse-effect": "^0.0.2",
     "html-to-image": "^1.11.11",
+    "image-js": "^0.35.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -20,6 +23,7 @@
     "react-router-dom": "^6.14.1",
     "react-spinners": "^0.13.8",
     "react-use-downloader": "^1.2.4",
+    "sharp": "^0.33.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
