--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mongoose": "^7.3.2"
+    "mongoose": "^7.3.2",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
